--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,39 @@
+<button (click)="show = !show">Toggle</button>
+<app-parent *ngIf="show" [title]="title"></app-parent>
+
 <!--<app-lesson5 (sayHi)="onSayHi($event)" [(counter)]="age" [title]=" expression ? 'one' : 'two'"></app-lesson5>-->
 <!--<button (click)="expression = !expression">{{!expression ? 'one' : 'two'}}</button>-->
-<app-lesson6 [template]="ref">
-  <h3 class="header">Header</h3>
-  <p class="body">Body</p>
-  <footer class="footer">Footer</footer>
-</app-lesson6>
+<!--<app-lesson6 [template]="ref">-->
+<!--  <h3 class="header">Header</h3>-->
+<!--  <p class="body">Body</p>-->
+<!--  <footer class="footer">Footer</footer>-->
+<!--</app-lesson6>-->
 
-<ng-template #ref let-element>
-  <p>{{element}} I am frp App component</p>
-</ng-template>
+<!--<ng-template #ref let-element>-->
+<!--  <p>{{element}} I am frp App component</p>-->
+<!--</ng-template>-->
+
+<!--<div>-->
+<!--  <button (click)="menu.show()">-->
+<!--    Open Menu-->
+<!--  </button>-->
+<!--  <app-lesson7menu #menu>-->
+<!--    <p>From App Component</p>-->
+<!--  </app-lesson7menu>-->
+<!--</div>-->
+<!--<div>-->
+<!--  <button (click)="menu1.show()">-->
+<!--    Open Menu-->
+<!--  </button>-->
+<!--  <app-lesson7menu #menu1>-->
+<!--    <p>From App Component</p>-->
+<!--  </app-lesson7menu>-->
+<!--</div>-->
+<!--<div>-->
+<!--  <button (click)="menu2.show()">-->
+<!--    Open Menu-->
+<!--  </button>-->
+<!--  <app-lesson7menu #menu2>-->
+<!--    <p>From App Component</p>-->
+<!--  </app-lesson7menu>-->
+<!--</div>-->
