--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<button (click)="show = !show">Toggle</button>
-<app-parent *ngIf="show" [title]="title"></app-parent>
+<button><a href="https://www.youtube.com/watch?v=kkX-7XCvXPI&list=PL4rYLeYunVf00vrezl1tzPDBKCNGr4Tvn&index=10">Lesson
+  10</a></button>
+
+<!--lesson 8-->
+<!--<button (click)="show = !show">Toggle</button>-->
+<!--<app-parent *ngIf="show" [title]="title"></app-parent>-->
 
 <!--<app-lesson5 (sayHi)="onSayHi($event)" [(counter)]="age" [title]=" expression ? 'one' : 'two'"></app-lesson5>-->
 <!--<button (click)="expression = !expression">{{!expression ? 'one' : 'two'}}</button>-->
