--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<button><a href="https://www.youtube.com/watch?v=kkX-7XCvXPI&list=PL4rYLeYunVf00vrezl1tzPDBKCNGr4Tvn&index=10">Lesson
+<button><a href="https://www.youtube.com/watch?v=p2IkdsEEuW4&list=PLjx6D4T5xIm2fPpD0l2Cl4kTW4X0JGs6p&index=13">Lesson
   10</a></button>
 
+<app-directive-lesson13></app-directive-lesson13>
 <!--lesson 8-->
 <!--<button (click)="show = !show">Toggle</button>-->
 <!--<app-parent *ngIf="show" [title]="title"></app-parent>-->
