--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <button><a href="https://www.youtube.com/watch?v=SD1_n8KDbMs&list=PLjx6D4T5xIm2fPpD0l2Cl4kTW4X0JGs6p&index=19">Lesson</a></button>
 
-<app-connections></app-connections>
+<app-app-post></app-app-post>
+
