Lifecycle hooks 25 lesson

--- a/src/app/components/projects/createComponents/app-post/app-post.component.html
+++ b/src/app/components/projects/createComponents/app-post/app-post.component.html
@@ -1,9 +1,19 @@
 <div class="container">
   <h1>Angular Components</h1>
-  <app-post-form></app-post-form>
+  <app-post-form
+    (onAdd)="upddatePosts($event)"
+  ></app-post-form>
   <hr>
   <app-post
   *ngFor="let p of posts"
   [post]="p"
-  ></app-post>
+  (onRemove)="removePost($event)"
+  >
+    <div #info>
+      <small *ngIf="p.text.length  > 10; else short">Пост длинный</small>
+      <ng-template #short>
+        <small>Пост короткий</small>
+      </ng-template>
+    </div>
+  </app-post>
 </div>
