--- a/src/app/components/projects/createComponents/app-post/app-post.component.html
+++ b/src/app/components/projects/createComponents/app-post/app-post.component.html
@@ -17,3 +17,6 @@
     </div>
   </app-post>
 </div>
+
+<button><a href="https://www.youtube.com/watch?v=SD1_n8KDbMs&list=PLjx6D4T5xIm2fPpD0l2Cl4kTW4X0JGs6p&index=20">Lesson</a></button>
+
